@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785)
+	- The scheduler not long allows multiple RSS subscriptions
+	  with the same URI (STR #2789)
 	- The scheduler now supports Kerberized printing with
 	  multiple server names (STR #2783)
 	- "Satisfy any" did not work in IPP policies (STR #2782)
